Navbar mas 2 secciones con info

--- a/index.html
+++ b/index.html
@@ -4,25 +4,84 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AZ Desing</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="./img/az logo.png">
+    <title>Zona Crypto</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="./img/Zona_Cripto.png" />
   </head>
 
   <body>
     <header class="header">
       <div class="logo">
-        <img src="./img/az logo.png" alt="logo de la marca" />
+        <img src="./img/Zona_Cripto.png" alt="logo de la marca" />
       </div>
-      <nav>
+      <nav class="navbar">
         <ul class="nav-links">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Productos</a></li>
-          <li><a href="#">Take Away</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Grupos</a></li>
+          <li><a href="#">Documentacion</a></li>
+          <li><a href="#">Socios</a></li>
+          <li><a href="#">Apreder</a></li>
+          <li><a href="#">Contacto</a></li>
         </ul>
       </nav>
-
-      <a href="#" class="btn"><button>Contacto</button></a>
     </header>
+
+    <main>
+      <section id="zona">
+        <div class="zona-info">
+          <h1>Mundo Crypto</h1>
+          <p>
+            <span>Nosotros comerciamos, tú ganas.</span> Zona Crypto es una
+            serie de grupos de traiding especializados en criptomonedas que
+            generan un rendimiento pasivo para nuestros titulares de tokens.
+          </p>
+          <div class="zona-btn">
+            <ul class="zona-btn-links">
+              <li><a href="#">Unete al Grupo</a></li>
+              <li><a href="#">Aprende más</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="zona-card">
+          <img src="./img/zona-card2.jpg" alt="Graficos Crypto" />
+          <div class="zona-card-grafic">
+            <div class="zona-card-top">
+              <p>Gráfico verificado por Myfxbook.com</p>
+              <p>23/08/22 00:48 GTM</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="info">
+        <div class="info-titulo">
+          <h2>Nosotros Comerciamos, tú Ganas.</h2>
+        </div>
+
+        <div class="info-descripcion-top">
+          <p>
+            <span>Zona Crypto</span> elige a los administradores de grupos para comercializar
+            nuestros criptoactivos dentro de los corredores regulados. A medida
+            que los grupos crecen a partir de la actividad comercial, el valor
+            de los tokens de <span>Zona Crypto</span> aumenta proporcionalmente.
+          </p>
+        </div>
+
+        <div class="info-descripcion-end">
+          <p>
+            Los tokens de <span>Zona Crypto</span> representan una parte de un
+            grupo y se puede canjear por activos subyasentes del grupo, ya sea
+            Bitcoin, Ethereum o USD. Al tener tokens, usted automaticamente
+            recibe las recompensas que generan nuestros administradores de
+            grupos.
+          </p>
+        </div>
+
+          
+        
+      </section>
+    </main>
+
+    <footer></footer>
   </body>
 </html>
